[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-data-quality-toolkit"
version = "0.1.0"
description = "A lightweight, dependency-free data quality library for PySpark DataFrames."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Korneli Pingula" }]
requires-python = ">=3.9"
dependencies = [
    "pyspark>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/Kornelius99/pyspark-data-quality-toolkit"

[tool.setuptools.packages.find]
where = ["src"]
